--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,21 @@
-joblib
-scipy
-torch
-transformers
-pandas
-lightgbm
-vaderSentiment
-schedule
-requests
-scikit-learn
-torch
-pytz
-datetime
 fastapi
 uvicorn
-tiktoken
-protobuf
+pandas
+numpy
+scikit-learn
+lightgbm
+vaderSentiment
+apscheduler
+requests
 python-multipart
+protobuf
 sentencepiece
+transformers
+torch
+tiktoken
+joblib
+scipy
+pytz
 yfinance
 lxml_html_clean
 newspaper3k
